k8s/manifests/network-system/ingress-nginx/static-routes/brother-printer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: printer
  namespace: network-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "monitor-share"
    hajimari.io/appName: "printer"

spec:
  tls:
    - secretName: tls.printer
      hosts:
        - &host "printer.${EXTERNAL_DOMAIN}"

  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: printer
                port:
                  name: https
